Prevent game from overflowing

--- a/public/style.css
+++ b/public/style.css
@@ -4,6 +4,5 @@ html,
 #root > div {
     height: 100%;
     margin: 0;
-    overflow: hidden;
 }
 
